--- a/FomMon.Angular/src/components/map/map.css
+++ b/FomMon.Angular/src/components/map/map.css
@@ -18,7 +18,6 @@
   left: 0;
   width: 300px;
   height: 100%;
-  z-index: 1000;
 }
 
 /* Base layer switcher floating in top right */
