--- a/FomMon.Angular/src/components/ngx-map/ngx-map.css
+++ b/FomMon.Angular/src/components/ngx-map/ngx-map.css
@@ -13,12 +13,8 @@
 }
 
 .sidebar {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 300px;
   height: 100%;
-  z-index: 1000;
 }
 
 
